# comparing_cam_pnp_triangulate

./: CMakeLists.txt  README.md
datas/: From_SLAM_to_Spatial_AI.txt  kimera.txt
src/: test.cpp
util/: pdf2text.py
